# TP-AEDSII

./: CMakeLists.txt  Hash.c  Hash.h  NossaPaty.c  NossaPaty.h  PatiLazaro.c  PatiLazaro.h  Patricia.c  Patricia.h  README.md  entrada.txt  executavel.txt  indiceHash.c  indiceHash.h  indiceInvertido.c  indiceInvertido.h  indicePaty.c  indicePaty.h  main  main.c  mainThulio.c  novaHash.c  novaHash.h  qntdEnc.c  qntdEnc.h  referencias_TP.txt
arquivos/: arquivo1.txt  arquivo2.txt  arquivo3.txt
